--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,9 @@
   <section>
     <div class="container">
       <div class="col-sm-12">
-        <div class="home-banner"> <img src="/assets/gbis.png"  alt="gbis"> </div>
+        <div class="home-banner">
+          <%= image_tag "gbis.png" %>
+        </div>
       </div>
     </div>
   </section>
