front page design about and placing order sections design

--- a/app/assets/stylesheets/v2/default.css
+++ b/app/assets/stylesheets/v2/default.css
@@ -3807,3 +3807,7 @@ ul.portfolio-filter > li.active > a {
     max-height: 250px;
     overflow: auto;
 }
+
+.box-shadow-none {
+    box-shadow: none;
+}
