--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,7 @@
     </div>
   </section>
 <% end %>
+<h1>Goulburn Broken Indigenous Seedbank</h1>
 <div class="row" id="about-gbis">
   <div class="col-sm-12 gbis-about">
     <div class="panel panel-default">
@@ -16,17 +17,42 @@
         <div class="panel-title">
           <h2>About Us</h2>
         </div>
-      <p>The Goulburn Broken Indigenous Seedbank plays a leading role in providing genetically healthy seed to support landscape restoration activities, striving for, and improving resilience of biodiversity.</p>
+      <p>The Goulburn Broken Indigenous Seedbank is a not for profit community enterprise that is part of Goulburn Valley Community Energy. It provides genetically healthy seed to support landscape restoration activities, striving for, and improving resilience of biodiversity in the Goulburn Broken Catchment.</p>
       </div>
       <br>
-      <div class="row">
+      <div class="row">                
         <div class="col-3">
           <div class="panel box-shadow-none">
             <div class="panel-heading">
-              <h3 class="panel-title">Establishment of native vegetation by hand planting and direct seeding methods can benefit.</h3>
+              <h3 class="panel-title">The Goulburn Broken Indigenous Seedbank</h3>
             </div>
             <ul>
-              <li>The condition of our soils eg salinity and erosion management</li>
+              <li>Operates to best practice techniques by following the Flora Bank Guidelines</li>
+              <li>Tests seed to ensure its quality</li>
+              <li>Supplies seed specific to your project</li>
+              <li>Aims to supply a diverse range of indigenous species for the catchment</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="panel box-shadow-none">
+            <div class="panel-heading">
+              <h3 class="panel-title">The use of local indigenous seed ensures</h3>
+            </div>
+            <ul>
+              <li>The genetic integrity of the local vegetation </li>
+              <li>Plants are adapted to the local conditions</li>
+              <li>Habitat for local fauna is suitable</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="panel box-shadow-none">
+            <div class="panel-heading">
+              <h3 class="panel-title">Establishment of native vegetation can benefit soil health through</h3>
+            </div>
+            <ul>
+              <li>Salinity and erosion management</li>
               <li>Remnant populations</li>
               <li>Biodiversity</li>
               <li>Agriculture production</li>
@@ -37,37 +63,12 @@
         <div class="col-3">
           <div class="panel box-shadow-none">
             <div class="panel-heading">
-              <h3 class="panel-title">The use of local indigenous seed ensures.</h3>
-            </div>
-            <ul>
-              <li>The genetic integrity of the local vegetation is enhanced</li>
-              <li>Plants are adapted to the local conditions</li>
-              <li>Suitable habitat for local fauna</li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="panel box-shadow-none">
-            <div class="panel-heading">
-              <h3 class="panel-title">The Goulburn Broken Indigenous Seedbank</h3>
-            </div>
-            <ul>
-              <li>Operates to best practice techniques by following the flora bank guidelines</li>
-              <li>Testing is carried out to determine the quality of the seed</li>
-              <li>Seed is provided to specialised order</li>
-              <li>Aim to provide a diverse range of indigenous species in the catchment</li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="panel box-shadow-none">
-            <div class="panel-heading">
-              <h3 class="panel-title">Serving the needs of:</h3>
+              <h3 class="panel-title">Serving the needs of</h3>
             </div>
             <ul>
               <li>Landcare groups</li>
               <li>Local conservation interest groups</li>
-              <li>Government organisation</li>
+              <li>Government agencies</li>
               <li>Plant nurseries</li>
               <li>Individual landholders</li>
               <li>Carbon farming investors</li>
@@ -85,9 +86,9 @@
         <div class="panel-title">
           <h2>Seed Collection</h2>
         </div>
-        <p>All seed is collected under a permit provided through the Flora and Fauna Guarantee Act of 1988.</p>
-        <p>Seed is collected from both public and private land from remnant stands and Seed Production Area’s (SPA’s) throughout the catchment.</p>
-        <p>SPAs are created using collections of healthy seed from multiple remnant populations. These collections are planted together to create reliable quantities of high quality, genetically diverse indigenous seed for revegetation.</p>
+        <p>All seed is collected under permit in accordance with the Flora and Fauna Guarantee Act (1988).</p>
+        <p>Seed is collected from both stands of remnant vegetation and Seed Production Areas throughout the catchment.</p>
+        <p>Seed Production Areas are created using collections of healthy seed from multiple remnant populations. These collections are planted together to create reliable quantities of high quality, genetically diverse indigenous seed for revegetation.</p>
       </div>
       <br>
       <div class="row">
@@ -97,11 +98,11 @@
               <h3 class="panel-title">Ethical Advantages of Seed Production</h3>
             </div>
             <ul>
-              <li>Reduce seed collection pressures on remnant vegetation.</li>
-              <li>Improve the biodiversityof seed being used for revegetation.</li>
-              <li>Improve genetic diversity of seed.</li>
-              <li>Introduce the use of vulnerable, rare or threatened species into revegetation.</li>
-              <li>Quality control with regard to origin of seed.</li>
+              <li>Reduces seed collection pressures on remnant vegetation.</li>
+              <li>Improves the diversity of seed available for revegetation.</li>
+              <li>Improves the genetic diversity of seed.</li>
+              <li>Introduces the use of vulnerable, rare or threatened species into revegetation.</li>
+              <li>Provides quality control with regard to the origin of seed.</li>
             </ul>
           </div>
         </div>
@@ -111,22 +112,11 @@
               <h3 class="panel-title">Ordering</h3>
             </div>
             <ul>
+              <li>Minimum of 5 grams per seed lot.</li>
               <li>Minimum of $25 per order.</li>
               <li>Postage and handling charges are applicable.</li>
               <li>Once seed is dispatched from the seedbank, ownership and responsibility passes to the purchaser.</li>
-              <li>No Grass lot is guaranteed to be pure.</li>
-              <li>Minimum of 5 grams per seed lot.</li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="panel box-shadow-none">
-            <div class="panel-heading">
-              <h3 class="panel-title">Nursery Orders</h3>
-            </div>
-            <ul>
-              <li>No treatments are applied to seed for Nursery orders.</li>
-              <li>Nursery prices as listed.</li>
+              <li>No grass seed lot is guaranteed to be pure.</li> 
             </ul>
           </div>
         </div>
@@ -136,8 +126,20 @@
               <h3 class="panel-title">Direct Seeding orders</h3>
             </div>
             <ul>
-              <li>Direct Seeding $715/kg</li>
+              <li>Direct Seeding price $715/kg</li>
+              <li>Locally indigenoous seed mix designed especially for your project</li>
               <li>All direct seeding orders have seed treatments applied accordingly. Our seed treatment are designed to break natural dormancy and improve germination rates. Opting out of seed treatments does not change the price of the seed.</li>
+            </ul>
+          </div>
+        </div>        
+        <div class="col-3">
+          <div class="panel box-shadow-none">
+            <div class="panel-heading">
+              <h3 class="panel-title">Nursery Orders</h3>
+            </div>
+            <ul>
+              <li>No treatments are applied to seed for Nursery orders.</li>
+              <li>Nursery prices as listed on the catalogue.</li>
             </ul>
           </div>
         </div>
@@ -158,9 +160,8 @@
         <div class="col-12">
           <div class="panel box-shadow-none">
             <ul>
-              <li>Orders can be placed directly from the online catalogue <br>– A customer needs to be registered with a unique email address. For first time user. <br>– Sign up and thereafter sign in. After placing the order, it will be emailed to the Seedbank and they will process the order and contact you as necessary.</li>
-              <li>You can phone the Seedbank on 0428 770 030</li>
-              <li>You can email your order to the Seedbank at seedbank@gvce.com.au </li>
+              <li>Orders can be placed directly from the online catalogue <br>– Customers need to be registered with a unique email address.<br>– Sign up and thereafter sign in. After you place the order, it will be emailed to the Seedbank and processing will commence</li>
+              <li>To discuss your order you can phone the Seedbank on 0428 770 030 or email seedbank@gvce.com.au </li>
             </ul>
           </div>
         </div>
