--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,9 @@
       <div class="col-sm-12">
         <div class="home-banner">
           <%= image_tag "gbis.png" %>
+          <div class="text-center">
+            <h1>Goulburn Broken Indigenous Seedbank</h1>
+          </div>
         </div>
       </div>
     </div>
@@ -160,7 +163,7 @@
         <div class="col-12">
           <div class="panel box-shadow-none">
             <ul>
-              <li>Orders can be placed directly from the online catalogue <br>– Customers need to be registered with a unique email address.<br>– Sign up and thereafter sign in. After you place the order, it will be emailed to the Seedbank and processing will commence</li>
+              <li>Orders can be placed directly from the online <%= link_to "catalogue", catalogue_general_path %> <br>– Customers need to be registered with a unique email address.<br>– Sign up and thereafter sign in. After you place the order, it will be emailed to the Seedbank and processing will commence</li>
               <li>To discuss your order you can phone the Seedbank on 0428 770 030 or email seedbank@gvce.com.au </li>
             </ul>
           </div>
