--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -38,6 +38,7 @@
     <li><%= link_to "Field Data Sheets", admin_deposits_path %></li>
     <li><%= link_to "SPA entry SS", admin_spa_entries_path %></li>
     <li><%= link_to "Settings", admin_settings_path %></li>
+    <li><%= link_to "Downloads", admin_downloads_path %></li>
     <li><%= link_to "CMS", "/cms-admin", target: "_blank" %></li>
 
     <li>
