--- a/app/views/layouts/v2/_navbar.html.erb
+++ b/app/views/layouts/v2/_navbar.html.erb
@@ -49,6 +49,9 @@
         </button>
         <a href="/" class="navbar-brand logo">
         </a>
+        <span class="tag-line">
+          GoulBurn Broken<br/>Indiginous Seedbank
+        </span>
         <!-- nav-collapse -->
       </div>
       <!-- /header-->
@@ -81,22 +84,15 @@
           <!--<li><%= link_to "SPA", catalogue_spa_path %></li>-->
           <!--</ul>-->
           <!--</li>-->
-          <% Cms::Site.first.pages.root.children.published.each do |page| %>
-              <% if page.children.present? %>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= page.label %>
-                      <i class="fa fa-angle-down parent-symbol"></i></a>
-                    <ul class="dropdown-menu">
-                      <li><%= link_to page.label, page.full_path %></li>
-                      <% page.children.published.each do |cc| %>
-                          <li><%= link_to cc.label, cc.full_path %></li>
-                      <% end %>
-                    </ul>
-                  </li>
-              <% else %>
-                  <li><%= link_to page.label, page.full_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Downloads
+              <i class="fa fa-angle-down parent-symbol"></i></a>
+            <ul class="dropdown-menu">
+              <% Download.all.each do |download| %>
+                <li><%= link_to download.file_name, admin_download_path(download) %></li>
               <% end %>
-          <% end if Cms::Site.first.present? %>
+            </ul>
+          </li>
 
           <%= render partial: "layouts/v2/#{(@current_user.role.downcase rescue "home")}/navbar" %>
         </ul>
