--- a/app/views/layouts/v2/_navbar.html.erb
+++ b/app/views/layouts/v2/_navbar.html.erb
@@ -65,7 +65,7 @@
         <% end %>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <%= link_to "About Goulburn Broken Indiginous Seedbank", "#{root_path}#about-gbis" %>
+            <%= link_to "About GBIS", "#{root_path}#about-gbis" %>
           </li>
           <li>
             <%= link_to "Legal", "#{root_path}#seed-collection" %>
