--- a/app/views/admin/orders/order_xls.xls.erb
+++ b/app/views/admin/orders/order_xls.xls.erb
@@ -82,7 +82,7 @@
           <Cell><Data ss:Type="String">Payee Number</Data></Cell>
           <Cell><Data ss:Type="String">Payee Address</Data></Cell>
           <Cell><Data ss:Type="String">Property Address</Data></Cell>
-          <Cell><Data ss:Type="String">Hactere</Data></Cell>
+          <Cell><Data ss:Type="String">Hectare</Data></Cell>
           <Cell><Data ss:Type="String">Kilometer</Data></Cell>
           <Cell><Data ss:Type="String">Grams per Kilometer</Data></Cell>
           <Cell><Data ss:Type="String">PON</Data></Cell>
@@ -101,7 +101,7 @@
           <Cell><Data ss:Type="String"><%= @order.order_form.payee_name %></Data></Cell>
           <Cell><Data ss:Type="String"><%= @order.order_form.payee_number %></Data></Cell>
           <Cell><Data ss:Type="String"><%= @order.order_form.payee_address %></Data></Cell>
-          <Cell><Data ss:Type="String"><%= @order.order_form.hactare %></Data></Cell>
+          <Cell><Data ss:Type="String"><%= @order.order_form.hectare %></Data></Cell>
           <Cell><Data ss:Type="String"><%= @order.order_form.kilometer %></Data></Cell>
           <Cell><Data ss:Type="String"><%= @order.order_form.grams_per_kilometer %></Data></Cell>
           <Cell><Data ss:Type="String"><%= @order.order_form.pon %></Data></Cell>
