--- a/app/views/admin/orders/order_xls.xls.erb
+++ b/app/views/admin/orders/order_xls.xls.erb
@@ -103,7 +103,7 @@
           <Cell><Data ss:Type="String"><%= @order.order_form.payee_address %></Data></Cell>
           <Cell><Data ss:Type="String"><%= @order.order_form.hectare %></Data></Cell>
           <Cell><Data ss:Type="String"><%= @order.order_form.kilometer %></Data></Cell>
-          <Cell><Data ss:Type="String"><%= @order.order_form.grams_per_kilometer %></Data></Cell>
+          <Cell><Data ss:Type="String"><%= @order.order_form.grams_per_km %></Data></Cell>
           <Cell><Data ss:Type="String"><%= @order.order_form.pon %></Data></Cell>
           <Cell><Data ss:Type="String"><%= @order.order_form.comments %></Data></Cell>
         </Row>
