--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
         <div class="home-banner">
           <%= image_tag "gbis.png" %>
           <div class="text-center">
-            <h1>Goulburn Broken Indigenous Seedbank</h1>
+            <h1 style="color: #39853d;">Goulburn Broken Indigenous Seedbank</h1>
           </div>
         </div>
       </div>
