--- a/app/views/layouts/v2/_navbar.html.erb
+++ b/app/views/layouts/v2/_navbar.html.erb
@@ -49,8 +49,8 @@
         </button>
         <a href="/" class="navbar-brand logo">
         </a>
-        <span class="tag-line">
-          GoulBurn Broken<br/>Indiginous Seedbank
+        <span class="tag-line" style="color: #39853d;">
+          Goulburn Broken<br/>Indiginous Seedbank
         </span>
         <!-- nav-collapse -->
       </div>
